# MuelAI

./: .env.example  .gitignore  README.md  SYSTEM_DESING_v2.md  dental_clinic.db  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: main.py  settings.py
src/admin/: app.py
src/agents/: __init__.py  classifier.py  prompts.py  responder.py
src/api/: twilio_client.py  webhook.py
src/database/: __init__.py  connection.py  migrate.py  models.py
src/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
src/schemas/: __init__.py  models.py
src/services/: __init__.py  appointment_service.py  doctor_service.py  patient_service.py  report_service.py
tests/: test_graph.py  test_services.py  test_webhook.py
