[tool.poetry]
name = "dental-assistant"
version = "0.1.0"
description = "Sistema de consultas odontológicas con LangGraph"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3"
langgraph = "^0.2"
langchain-google-genai = "^2.0"
sqlalchemy = "^2.0"
streamlit = "^1.40"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
